2_accounts_res_creation

--- a/cf.yml
+++ b/cf.yml
@@ -1,1 +1,12 @@
-BucketName: gautam123watchguardtest
+---
+Parameters:
+ BucketName:
+  Description: S3 Bucket Name
+  Type: String
+
+Resources:
+  S3Bucket:
+    Type: 'AWS::S3::Bucket'
+    DeletionPolicy: Retain
+    Properties:
+      BucketName: !Ref BucketName
