--- a/cf.yml
+++ b/cf.yml
@@ -1,4 +1,6 @@
 ---
+AWSTemplateFormatVersion: "2010-09-09"
+
 Parameters:
  BucketName:
   Description: S3 Bucket Name
@@ -9,4 +11,4 @@ Resources:
     Type: 'AWS::S3::Bucket'
     DeletionPolicy: Retain
     Properties:
-      BucketName: !Ref BucketName
+      BucketName: !Fn Ref BucketName
