--- a/cf.yml
+++ b/cf.yml
@@ -8,7 +8,8 @@ Parameters:
 
 Resources:
   S3Bucket:
-    Type: 'AWS::S3::Bucket'
-    DeletionPolicy: Retain
+    Type: AWS::S3::Bucket
+    Description: Creating Amazon S3 bucket from CloudFormation
     Properties:
-      BucketName: !Fn Ref BucketName
+      BucketName: !Ref BucketName
+      
