--- a/ec2.yml
+++ b/ec2.yml
@@ -16,9 +16,9 @@ Resources:
     Type: AWS::EC2::Instance
     Properties:
       ImageId: ami-05502a22127df2492
-      InstanceType: !Fn Ref InstanceType
+      InstanceType: !Ref InstanceType
       Tags:
         - Key: Name
-          Value: !Fn Ref InstanceName
+          Value: !Ref InstanceName
 
   
