--- a/cf.yml
+++ b/cf.yml
@@ -6,10 +6,48 @@ Parameters:
   Description: S3 Bucket Name
   Type: String
 
+
 Resources:
  S3Bucket:
   Type: AWS::S3::Bucket
   Description: Creating Amazon S3 bucket from CloudFormation
   Properties:
     BucketName: !Ref BucketName
+ 
+ 
+
+ IamPolicy:
+  Type: AWS::IAM::Policy
+  DependsOn: IamRole
+  Properties:
+    PolicyName: UserPolicyCf
+    PolicyDocument: 
+      Version: "2012-10-17"
+      Statement:
+        - Effect: Allow
+          Action:
+            - 's3:GetObject'
+            - 's3:PutObject'
+            - 's3:PutObjectAcl'
+          Resource: 'arn:aws:s3:::${!Ref BucketName}/*'
+    Roles:
+      - !Ref IamRole 
+  
+ IamRole:
+  Type: AWS::IAM::Role
+  Properties: 
+    AssumeRolePolicyDocument:
+      Version: "2012-10-17"
+      Statement:
+        - Effect: Allow
+          Principal:
+            Service:
+              AWS: arn:aws:iam::268819417241:root
+          Action: sts:AssumeRole
+  
+ MyIamRoleArn:
+  Type: AWS::CloudFormation::Export
+  Properties:
+    Name: MyIamRoleArn
+    Value: !GetAtt IamRole.Arn
       
