2_accounts_res_creation

--- a/ec2.yml
+++ b/ec2.yml
@@ -31,4 +31,4 @@ Resources:
         Statement:
           - Effect: Allow
             Action: 'sts:AssumeRole'
-            Resource: !ImportValue MyIamRoleArn
+            Resource: '*'
