--- a/cf.yml
+++ b/cf.yml
@@ -19,30 +19,17 @@ Resources:
 
  IamPolicy:
   Type: AWS::IAM::Policy
-  DependsOn: IamRole
   Properties:
     PolicyName: UserPolicyCf
     PolicyDocument: 
       Version: "2012-10-17"
       Statement:
         - Effect: Allow
+          Principal: 
+            AWS: 'arn:aws:iam::268819417241:root'
           Action:
             - 's3:GetObject'
             - 's3:PutObject'
             - 's3:PutObjectAcl'
           Resource: 'arn:aws:s3:::${!Ref BucketName}/*'
-    Roles:
-      - !Ref IamRole 
-  
- IamRole:
-  Type: AWS::IAM::Role
-  Properties: 
-    AssumeRolePolicyDocument:
-      Version: "2012-10-17"
-      Statement:
-        - Effect: Allow
-          Principal:
-            Service:
-              AWS: 'arn:aws:iam::268819417241'
-          Action: sts:AssumeRole
       
