--- a/cf.yml
+++ b/cf.yml
@@ -31,5 +31,5 @@ Resources:
             - 's3:GetObject'
             - 's3:PutObject'
             - 's3:PutObjectAcl'
-          Resource: 'arn:aws:s3:::${!Ref BucketName}/*'
+          Resource: !Ref 'arn:aws:s3:::${BucketName}/*'
       
