2_accounts_res_creation

--- a/ec2.yml
+++ b/ec2.yml
@@ -42,6 +42,6 @@ Resources:
               - 's3:GetObject'
               - 's3:PutObject'
               - 's3:PutObjectAcl'
-            Resource: !Ref 'arn:aws:s3:::${BucketName}'
+            Resource: !Sub 'arn:aws:s3:::${BucketName}'
       Users:
        - !Ref IamUser
