--- a/ec2.yml
+++ b/ec2.yml
@@ -22,6 +22,11 @@ Resources:
     Properties:
       ImageId: ami-05502a22127df2492
       InstanceType: !Ref InstanceType
+      UserData:
+       Fn::Base64: !Sub |
+         #!/bin/bash
+         sudo yum -y install httpd
+         sudo service httpd start
       Tags:
         - Key: Name
           Value: !Ref InstanceName
