--- a/ec2.yml
+++ b/ec2.yml
@@ -44,9 +44,9 @@ Resources:
         Statement:
           - Effect: Allow
             Action: 
-              - 's3:GetObject'
-              - 's3:PutObject'
-              - 's3:PutObjectAcl'
-            Resource: !Sub 'arn:aws:s3:::${BucketName}'
+              - 's3:*'
+            Resource:
+              - !Sub 'arn:aws:s3:::${BucketName}/*'
+              - !Sub 'arn:aws:s3:::${BucketName}'
       Users:
        - !Ref IamUser
