2_accounts_res_creation

--- a/ec2.yml
+++ b/ec2.yml
@@ -37,12 +37,15 @@ Resources:
 
   IamPolicy:
     Type: AWS::IAM::Policy
+    DependsOn: IamRole
     Properties:
       PolicyName: UserPolicy
       PolicyDocument: 
         Version: "2012-10-17"
         Statement:
           - Effect: Allow
+            Principal: 
+            AWS: 'arn:aws:iam::868340526592:user/gautamAdmin'
             Action: 
               - 's3:*'
             Resource:
